<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strings originating from the login page -->
    <string name="login_page_prompt">Please log in to use app</string>
    <string name="string_username">Username</string>
    <string name="string_password">Password</string>
    <string name="button_login">Sign In</string>
    <string name="button_register">Sign Up</string>
    <string name="button_I_forgot">Forgot Password?</string>

    <!-- Strings for password reset -->
    <string name="prompt_enter_username">Please enter your username</string>
    <string name="page_title_reset">Password Reset Page</string>

    <!-- Strings originating from the sign up page -->
    <string name="signup_page_title">Register Account</string>
    <string name="signup_page_prompt">Please fill in all fields</string>

        <!-- User is to be asked for simply a username, password and email -->
    <string name="signup_email">Email address</string>
    <string name="signup_security_question">Custom security question</string>
    <string name="signup_security_answer">Answer</string>
    <string name="button_complete_register">Register!</string>

    <!-- Strings originating from Main page -->
    <string name="app_name">Making Bank</string>
    <string name="main_menu_title">EveryOneRich Bank</string>
    <string name="button_account_create">Create Account</string>
    <string name="button_account_view">View Account</string>
    <string name="action_settings">Settings</string>
    <string name="view_account_page_title">View Bank Accounts</string>
    <string name="view_transactions_title">Transactions</string>
    <string name="button_logout">Log Out</string>
    <string name="button_my_info">Edit Info</string>
    <string name="title_my_info">Edit Your Info</string>
    
    <!-- Strings used for creating buttons -->
    <string name="next">Next</string>

    <!-- Strings originating from Create Account page -->
    <string name="create_account_page_title">Create Bank Account</string>
    <string name="create_account_page_desc">Select an account type</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="string_address">Current Address</string>
    <string name="string_address_line">Address</string>
    <string name="string_current_city">City</string>
    <string name="string_box_number">Zip code</string>
    <string name="button_submit_info">Submit</string>
    <string name="string_account_type">Account type</string>
    <string name="string_phone">Phone Number</string>
    <string name="phone_hint">XXX-YYY-ZZZZ</string>

    <!-- Strings originating from account options page -->
    <string name="account_actions_title">Info for account</string>
    <string name="string_transfer">Transfer Money</string>
    <string name="string_close">Close Account</string>
    <string name="string_view_history">View Statement</string>
    <string name="string_current_balance">Current Balance: $</string>
    <string name="string_threshold_change">Change Threshold</string>
    <string name="string_home_menu">Home Menu</string>
    <string name="string_make_default">Make Default Account</string>
    <string name="account_info_dashboard">Default Account is the account that receives money
        during a transfer from another user.</string>

    <!-- Strings originating from admin's home page -->
    <string name="string_find_account">Account Lookup</string>
    <string name="string_perform_transaction">Perform Transaction</string>
    <string name="string_select_transaction">Transaction Type</string>
    <string name="string_account_name">Account Number</string>
    <string name="string_value">Transaction Amount</string>

    <!-- Strings in the edit threshold page -->
    <string name="threshold_prompt">You will be notified if your account balance falls below
         the specified amount of money.
    </string>

    <!-- Strings in the transfer page -->
    <string name="string_transfer_self">Transfer Between Accounts</string>
    <string name="string_transfer_other">Transfer to Another Person</string>
    <string name="string_amount_transfer">Amount to Transfer</string>
    <string name="string_transfer_other_explanation">Please enter either the phone number or
        email of the person you wish to transfer to. Money will be transferred to the other
        customer\'s default account.</string>
    <string name="prompt_what_transfer_criteria">Enter email or phone</string>

    <!-- MISCELLANEOUS STRINGS AND VALUES -->

    <!-- Array for transfer search criteria -->
    <string-array name="transfer_criteria_options">
        <item>Select</item>
        <item>Transfer to email</item>
        <item>Transfer to phone</item>
    </string-array>

    <!-- Array for account transaction type -->
    <string-array name="account_transaction_types">
        <item>Select</item>
        <item>Credit</item>
        <item>Debit</item>
    </string-array>

    <!-- Array for account creation types -->
    <string-array name="account_creation_account_types">
        <item>Select</item>
        <item>Checking</item>
        <item>Savings</item>
    </string-array>

    <!-- Array listing the states of the U.S. and territories -->
    <string-array name="account_creation_states">
        <item>State</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Floria</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
        <item>Guam</item>
        <item>Mariana Islands</item>
        <item>Puerto Rico</item>
        <item>Virgin Islands</item>
        
    </string-array>

    <!-- Color constants for string attributes-->
    <color name="WHITE">#FFFFFF</color>
    <color name="RED">#FF0000</color>
    <color name="GREEN">#00FF00</color>
    <color name="BLUE">#0000FF</color>
    <color name="MAGENTA">#FF00FF</color>
    <color name="YELLOW">#FFFF00</color>
    <color name="CYAN">#00FFFF</color>
    <color name="BLACK">#000000</color>
    <color name="GRAY">#444444</color>
    <color name="BROWN">#440000</color>
    <color name="ORANGE">#FF8800</color>
    <color name="BLUEGRAY">#CCCCFF</color>
    <color name="LIGHTBLUE">#AAAADD</color>

    <!-- OTHER STRINGS ORIGINATING FROM HOANG'S "TELEPORTING BUTTON" APP
       - DO NOT REPRODUCE WITHOUT PERMISSION -->
    <!-- Strings from home screen -->
    <string name="offline_prompt">Oh no! You\'re disconnected from the Internet!
    But don\'t fret, enjoy this fun mini-game while reconnecting!
    \nOriginally designed by Hoang Tran for the \"Teleporting Button\" app,
    available in the Google Play Store!</string>
    <string name="start_game">Start</string>
    <string name="help_game">Instructions</string>
    <string name="scores_page">High Scores</string>
    <!-- Strings from the high scores page -->
    <string name="scores_page_title">High Scores</string>
    <string name="str_easy_mode">Easy Mode: </string>
    <string name="str_normal_mode">Normal Mode: </string>
    <string name="str_hard_mode">Hard Mode: </string>
    <string name="str_reset_score">Reset high scores</string>
    <!-- Strings for game mode selection page -->
    <string name="game_mode_prompt">Select game mode</string>
    <string name="option_easy_mode">Easy Mode</string>
    <string name="option_normal_mode">Normal Mode</string>
    <string name="option_hard_mode">Hard Mode</string>
    <!-- Strings for game page -->
    <string name="time_left">Time left:</string>
    <string name="points">Score:</string>
    <string name="easy_game_message">The button never moves!</string>
    <!-- Strings for game over page -->
    <string name="game_over">Game Over!</string>
    <string name="your_score">Your score: </string>
    <string name="new_high_score">New high score!</string>
    <string name="high_score">Best score: </string>
    <string name="replay">Play again</string>
    <string name="main_menu">Main menu</string>

</resources>