<?xml version="1.0" encoding="utf-8"?>

<!-- XML file for Sign Up page -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollviewCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:scrollbars="vertical" >

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <!-- Replace this image with something nicer later on -->
    <ImageView
        android:contentDescription="login_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/placeholder"
        android:id="@+id/imageView3"/>

    <!-- Prompt for register page -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signup_page_prompt"
        android:textSize="24sp"
        android:textColor="@color/RED"
        android:id="@+id/registerPagePrompt" />

    <!-- Ask for user's username -->
    <EditText
        android:id="@+id/EditTextUserNameR"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/string_username" />

    <!-- Ask for user's password -->
    <EditText
        android:id="@+id/EditTextPasswordR"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="textPassword"
        android:hint="@string/string_password" />

    <!-- Ask for user's email -->
    <EditText
        android:id="@+id/EditTextEmailR"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/signup_email" />

    <!-- Ask for user's preferred security question -->
    <EditText
        android:id="@+id/EditTextSecurityQuestion"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/signup_security_question"/>

    <!-- Ask for user's security question's answer -->
    <EditText
        android:id="@+id/EditTextAnswerR"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/signup_security_answer" />

    <!-- Submit button -->
    <Button
        android:id="@+id/button_completeSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="submitSignUp"
        android:text="@string/button_complete_register"
        android:textSize="24sp"
        android:textColor="@color/BROWN"/>

    </LinearLayout>
</ScrollView>