<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollviewCreateAccount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical" >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
		
    <!-- Title for account creation page -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_account_page_title"
        android:textSize="30sp"
        android:textColor="@color/BLUE"
        android:id="@+id/createAccountPageTitle" />

    <!-- Prompt the user to enter their information -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_page_desc"
        android:textSize="20sp"
        android:textColor="@color/RED"
        android:id="@+id/createAccountPageDesc"/>

    <!-- Ask for user's first name -->
	<EditText 
	    android:id="@+id/EditTextFirstName"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:hint="@string/first_name" />
	
    <!-- Ask for user's last name -->
	<EditText 
	    android:id="@+id/EditTextLastName"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:hint="@string/last_name" />

    <!-- TODO add a field to enter the user Address
       - Follow standard U.S. postal address prompts where
       - fields are Address Line 1, Address Line 2,
       - City, State, and P.O. Box number -->
    <!-- TODO add a dropbox to select the account type
       - This is either a checking or savings account -->

    <!-- Submit button -->
    <Button
        android:id="@+id/button_submit_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="submitName"
        android:text="@string/button_submit_info"
        android:textSize="24sp"
        android:textColor="@color/BROWN"/>

</LinearLayout>
</ScrollView>