<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/PURPLE">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/page_title_reset"
        android:textSize="25dp"
        android:textColor="@color/BLUE"
        android:id="@+id/resetPageTitle"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/prompt_enter_username"
        android:layout_below="@+id/resetPageTitle"
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:textColor="@color/BLUE"
        android:id="@+id/resetPrompt"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/queryForm"
        android:textSize="24dp"
        android:hint="@string/string_username"
        android:layout_below="@+id/resetPrompt"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit_info"
        android:textSize="30dp"
        android:id="@+id/buttonQuerySubmit"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/queryForm"
        android:layout_centerHorizontal="true"
        android:onClick="submitReset"/>

</RelativeLayout>