<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/BLUEGRAY">

    <!-- This is the page title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/string_transfer_other"
        android:textSize="24sp"
        android:textColor="@color/BROWN"
        android:id="@+id/transferPageTitle"
        android:layout_gravity="center_horizontal"/>

    <!-- This line describes the "from" account -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="5sp"
        android:textSize="20sp"
        android:textColor="@color/BROWN"
        android:id="@+id/fromAccountLine"/>

    <!-- This line describes what to do for the "to" account -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="5sp"
        android:text="@string/string_transfer_other_explanation"
        android:gravity="center"
        android:textSize="19sp"
        android:textColor="@color/BROWN"
        android:id="@+id/toAccountExplanation"/>

    <!-- This line tells the user to enter something -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="5sp"
        android:textSize="24sp"
        android:textColor="@color/BROWN"
        android:text="@string/prompt_what_transfer_criteria"
        android:id="@+id/toWhatTypePrompt"
        android:layout_gravity="center_horizontal"/>

    <!-- This is where the user enters the data to enter -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5sp"
        android:textSize="30sp"
        android:background="@drawable/round_corners"
        android:paddingTop="3sp"
        android:paddingBottom="3sp"
        android:id="@+id/criteriaData"
        android:layout_gravity="center_horizontal"/>

    <!-- This line prompts user to enter some numerical value -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="5sp"
        android:textSize="24sp"
        android:textColor="@color/BROWN"
        android:text="@string/string_amount_transfer"
        android:id="@+id/transferPrompt"
        android:layout_gravity="center_horizontal"/>

    <!-- This is where the user enters the amount to transfer -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:layout_marginTop="5sp"
        android:textSize="30sp"
        android:background="@drawable/round_corners"
        android:paddingTop="3sp"
        android:paddingBottom="3sp"
        android:id="@+id/transferAmountField"
        android:layout_gravity="center_horizontal"/>

    <!-- Submit button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit_info"
        android:id="@+id/button"
        android:background="@drawable/button_round_corners"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:layout_marginTop="5sp"
        android:layout_gravity="center_horizontal"
        android:onClick="submitTransfer"/>

</LinearLayout>